--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "useTabs": false,
+  "endOfLine": "lf",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
