--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d out",
-    "lint": "next lint"
+    "lint": "next lint",
+    "endLf": "npx prettier --write ."
   },
   "dependencies": {
     "next": "14.2.14",
